--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,21 +3,22 @@
   "build": {
     "dockerfile": "Dockerfile",
     "context": "..",
-    "args": {
-      "TORCH_CUDA_EXTRA": "torch-cu126"
-    },
     "options": [
       "--build-arg",
       "BUILDKIT_INLINE_CACHE=1"
     ]
   },
   "runArgs": [
-    "--gpus", "all",
+    "--gpus",
+    "all",
     "--shm-size=8g",
-    "--ulimit", "memlock=-1",
-    "--ulimit", "stack=67108864",
+    "--ulimit",
+    "memlock=-1",
+    "--ulimit",
+    "stack=67108864",
     "--runtime=nvidia",
-    "--security-opt", "no-new-privileges:true"
+    "--security-opt",
+    "no-new-privileges:true"
   ],
   "containerUser": "ubuntu",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
@@ -36,11 +37,31 @@
     "CUDA_HOME": "/usr/local/cuda-12.6"
   },
   "mounts": [
-    { "source": "torch-starter-hf-cache", "target": "/home/vscode/.cache/huggingface", "type": "volume" },
-    { "source": "torch-starter-torch-cache", "target": "/home/vscode/.cache/torch", "type": "volume" },
-    { "source": "torch-starter-kaggle-cache", "target": "/home/vscode/.kaggle", "type": "volume" },
-    { "source": "torch-starter-data", "target": "/workspaces/${localWorkspaceFolderBasename}/data", "type": "volume" },
-    { "source": "torch-starter-uv-cache", "target": "/home/vscode/.cache/uv", "type": "volume" },
+    {
+      "source": "torch-starter-hf-cache",
+      "target": "/home/vscode/.cache/huggingface",
+      "type": "volume"
+    },
+    {
+      "source": "torch-starter-torch-cache",
+      "target": "/home/vscode/.cache/torch",
+      "type": "volume"
+    },
+    {
+      "source": "torch-starter-kaggle-cache",
+      "target": "/home/vscode/.kaggle",
+      "type": "volume"
+    },
+    {
+      "source": "torch-starter-data",
+      "target": "/workspaces/${localWorkspaceFolderBasename}/data",
+      "type": "volume"
+    },
+    {
+      "source": "torch-starter-uv-cache",
+      "target": "/home/vscode/.cache/uv",
+      "type": "volume"
+    },
     {
       "source": "${localWorkspaceFolder}/.env.local",
       "target": "/workspaces/${localWorkspaceFolderBasename}/.env.local",
@@ -49,100 +70,134 @@
     }
   ],
   "initializeCommand": [
-    "bash", "-c",
-    "docker volume create torch-starter-hf-cache 2>/dev/null || true; \
-     docker volume create torch-starter-torch-cache 2>/dev/null || true; \
-     docker volume create torch-starter-kaggle-cache 2>/dev/null || true; \
-     docker volume create torch-starter-data 2>/dev/null || true; \
-     docker volume create torch-starter-uv-cache 2>/dev/null || true; \
-     touch .env.local 2>/dev/null || true"
-  ],
-  "features": {
-    "ghcr.io/devcontainers/features/common-utils:2": {
-      "configureZshAsDefaultShell": true
-    },
-    "ghcr.io/devcontainers/features/git:1": {
-      "ppa": false,
-      "version": "os-provided"
-    }
-  },
-  "postCreateCommand": {
-    "activate-env": "bash -c 'source .venv/bin/activate && python -c \"import torch; print(f\\\"🚀 Environment ready! CUDA: {torch.cuda.is_available()}, Devices: {torch.cuda.device_count()}\\\")\"'",
-    "setup-git": "git config --global --add safe.directory /workspaces/${localWorkspaceFolderBasename}",
-    "setup-env": "bash -c '[ ! -f .env.local ] && cp templates/env.local .env.local && chmod 600 .env.local && echo \"📝 Created .env.local from template\" || echo \"✓ .env.local already exists\"'"
-  },
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance",
-        "ms-toolsai.jupyter",
-        "charliermarsh.ruff",
-        "eamodio.gitlens",
-        "EditorConfig.EditorConfig",
-        "ms-azuretools.vscode-docker",
-        "RooVeterinaryInc.roo-cline",
-        "mechatroner.rainbow-csv",
-        "gaogaotiantian.viztracer-vscode",
-        "bierner.markdown-mermaid",
-        "github.vscode-github-actions"
-      ],
-      "settings": {
-        "python.defaultInterpreterPath": "/workspaces/${localWorkspaceFolderBasename}/.venv/bin/python",
-        "python.terminal.activateEnvironment": true,
-        "python.analysis.typeCheckingMode": "basic",
-        "python.analysis.autoImportCompletions": true,
-        "python.analysis.indexing": true,
-        "python.testing.pytestEnabled": true,
-        "python.testing.unittestEnabled": false,
-        "python.testing.pytestArgs": ["tests"],
-        "ruff.enable": true,
-        "ruff.organizeImports": true,
-        "ruff.serverEnabled": true,
-        "ruff.lint.enable": true,
-        "ruff.format.enable": true,
-        "files.watcherExclude": {
-          "**/.venv/**": true,
-          "**/__pycache__/**": true,
-          "**/.mypy_cache/**": true,
-          "**/.ruff_cache/**": true,
-          "**/.pytest_cache/**": true,
-          "**/node_modules/**": true
-        },
-        "search.exclude": {
-          "**/.venv": true,
-          "**/__pycache__": true,
-          "**/.mypy_cache": true,
-          "**/.ruff_cache": true
-        },
-        "files.exclude": {
-          "**/.venv": false,
-          "**/__pycache__": true,
-          "**/.mypy_cache": true,
-          "**/.ruff_cache": true,
-          "**/.pytest_cache": true
-        },
-        "terminal.integrated.defaultProfile.linux": "zsh",
-        "terminal.integrated.shellIntegration.enabled": true,
-        "jupyter.askForKernelRestart": false,
-        "notebook.experimental.openGettingStarted": false,
-        "git.enableSmartCommit": true,
-        "git.autofetch": true,
-        "extensions.autoUpdate": false,
-        "telemetry.telemetryLevel": "off"
+    "bash",
+    "-c",
+    "
+    # --- Check NVIDIA driver before container build ---
+    if ! command -v nvidia-smi &> /dev/null; then
+        echo '❌ NVIDIA driver not found (nvidia-smi missing). Please install it before building.' >&2
+        exit 1
+    fi
+
+    REQUIRED_MAJOR=555
+    REQUIRED_MINOR=42
+    DRV_VER=$(nvidia-smi --query-gpu=driver_version --format=csv,noheader | head -n1)
+    DRV_MAJOR=$(echo $DRV_VER | cut -d. -f1)
+    DRV_MINOR=$(echo $DRV_VER | cut -d. -f2)
+
+    echo '🔍 Found NVIDIA driver:' $DRV_VER
+
+    if [ \"$DRV_MAJOR\" -gt \"$REQUIRED_MAJOR\" ] || \
+      ([ \"$DRV_MAJOR\" -eq \"$REQUIRED_MAJOR\" ] && [ \"$DRV_MINOR\" -ge \"$REQUIRED_MINOR\" ]); then
+        echo '✅ Driver is new enough for CUDA 12.6'
+    else
+        echo '❌ Driver too old (need ≥' ${REQUIRED_MAJOR
+      }.${REQUIRED_MINOR
+      } '). Upgrade your driver.' >&2
+        exit 1
+    fi
+
+    # --- Existing volume setup ---
+    docker volume create torch-starter-hf-cache 2>/dev/null || true;
+    docker volume create torch-starter-torch-cache 2>/dev/null || true;
+    docker volume create torch-starter-kaggle-cache 2>/dev/null || true;
+    docker volume create torch-starter-data 2>/dev/null || true;
+    docker volume create torch-starter-uv-cache 2>/dev/null || true;
+    touch .env.local 2>/dev/null || true
+    "
+    ],
+    "features": {
+      "ghcr.io/devcontainers/features/common-utils:2": {
+        "configureZshAsDefaultShell": true
+      },
+      "ghcr.io/devcontainers/features/git:1": {
+        "ppa": false,
+        "version": "os-provided"
       }
-    }
-  },
-  "remoteEnv": {
-    "ROO_CONFIG_PATH": "/workspaces/${localWorkspaceFolderBasename}/.roo/roo.json",
-    "MCP_SERVERS_CONFIG": "/workspaces/${localWorkspaceFolderBasename}/.mcp/servers.json"
-  },
-  "shutdownAction": "stopContainer",
-  "hostRequirements": {
-    "gpu": true,
-    "memory": "8gb",
-    "cpus": 4
-  },
-  "capAdd": ["SYS_PTRACE"],
-  "securityOpt": ["seccomp=unconfined"]
-}
+    },
+    "postCreateCommand": {
+      "activate-env": "bash -c 'source .venv/bin/activate && python - <<EOF\nimport torch; print(f\"🚀 Env ready! PyTorch: {torch.__version__}, CUDA Toolkit: {torch.version.cuda}, Available: {torch.cuda.is_available()}, Devices: {torch.cuda.device_count()}\")\nEOF'",
+      "setup-git": "git config --global --add safe.directory /workspaces/${localWorkspaceFolderBasename}",
+      "setup-env": "bash -c '[ ! -f .env.local ] && cp templates/env.local .env.local && chmod 600 .env.local && echo \"📝 Created .env.local from template\" || echo \"✓ .env.local already exists\"'"
+    },
+    "customizations": {
+      "vscode": {
+        "extensions": [
+          "ms-python.python",
+          "ms-python.vscode-pylance",
+          "ms-toolsai.jupyter",
+          "charliermarsh.ruff",
+          "eamodio.gitlens",
+          "EditorConfig.EditorConfig",
+          "ms-azuretools.vscode-docker",
+          "RooVeterinaryInc.roo-cline",
+          "mechatroner.rainbow-csv",
+          "gaogaotiantian.viztracer-vscode",
+          "bierner.markdown-mermaid",
+          "github.vscode-github-actions"
+        ],
+        "settings": {
+          "python.defaultInterpreterPath": "/workspaces/${localWorkspaceFolderBasename}/.venv/bin/python",
+          "python.terminal.activateEnvironment": true,
+          "python.analysis.typeCheckingMode": "basic",
+          "python.analysis.autoImportCompletions": true,
+          "python.analysis.indexing": true,
+          "python.testing.pytestEnabled": true,
+          "python.testing.unittestEnabled": false,
+          "python.testing.pytestArgs": [
+            "tests"
+          ],
+          "ruff.enable": true,
+          "ruff.organizeImports": true,
+          "ruff.serverEnabled": true,
+          "ruff.lint.enable": true,
+          "ruff.format.enable": true,
+          "files.watcherExclude": {
+            "**/.venv/**": true,
+            "**/__pycache__/**": true,
+            "**/.mypy_cache/**": true,
+            "**/.ruff_cache/**": true,
+            "**/.pytest_cache/**": true,
+            "**/node_modules/**": true
+          },
+          "search.exclude": {
+            "**/.venv": true,
+            "**/__pycache__": true,
+            "**/.mypy_cache": true,
+            "**/.ruff_cache": true
+          },
+          "files.exclude": {
+            "**/.venv": false,
+            "**/__pycache__": true,
+            "**/.mypy_cache": true,
+            "**/.ruff_cache": true,
+            "**/.pytest_cache": true
+          },
+          "terminal.integrated.defaultProfile.linux": "zsh",
+          "terminal.integrated.shellIntegration.enabled": true,
+          "jupyter.askForKernelRestart": false,
+          "notebook.experimental.openGettingStarted": false,
+          "git.enableSmartCommit": true,
+          "git.autofetch": true,
+          "extensions.autoUpdate": false,
+          "telemetry.telemetryLevel": "off"
+        }
+      }
+    },
+    "remoteEnv": {
+      "ROO_CONFIG_PATH": "/workspaces/${localWorkspaceFolderBasename}/.roo/roo.json",
+      "MCP_SERVERS_CONFIG": "/workspaces/${localWorkspaceFolderBasename}/.mcp/servers.json"
+    },
+    "shutdownAction": "stopContainer",
+    "hostRequirements": {
+      "gpu": true,
+      "memory": "8gb",
+      "cpus": 4
+    },
+    "capAdd": [
+      "SYS_PTRACE"
+    ],
+    "securityOpt": [
+      "seccomp=unconfined"
+    ]
+  }
