--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "torch-starter"
 version = "0.1.0"
-description = "Optimized Deep Learning starter template with uv, CUDA 12.6 PyTorch, and VS Code Dev Containers."
+description = "Optimized Deep Learning starter template with uv, CUDA 12.4 PyTorch, and VS Code Dev Containers."
 requires-python = ">=3.12,<3.13"
 license = { text = "MIT" }
 authors = [{ name = "Your Name" }]
@@ -9,6 +9,13 @@ keywords = ["deep-learning", "pytorch", "transformers", "uv", "devcontainer"]
 
 # Minimal core dependencies - only essentials for performance
 dependencies = [
+  # Core scientific computing
+  "numpy>=1.26,<2.0",
+  "pandas>=2.0,<3.0",
+  "scipy>=1.11,<2.0",
+  # Machine learning essentials
+  "scikit-learn>=1.3,<2.0",
+  "tqdm>=4.66,<5.0",
   # Deep learning core
   "transformers>=4.42,<5.0",
   "datasets>=2.19,<3.0",
@@ -16,20 +23,13 @@ dependencies = [
   "safetensors>=0.4,<1.0",
   "torchvision>=0.21.0",
   "torchaudio>=2.6.0",
-  "albumentations>=1.3.1,<2.0",
-  # Core scientific computing
-  "numpy>=1.26,<2.0",
-  "pandas>=2.0,<3.0",
-  "scipy>=1.11,<2.0",
-  # Machine learning essentials
-  "scikit-learn>=1.3,<2.0",
-  "tqdm>=4.66.0",
+  "albumentations>=2.0.8",
   # Tokenization
-  "sentencepiece>=0.1.99",
+  "sentencepiece>=0.1.99,<1.0",
   # Visualization (minimal)
-  "matplotlib>=3.7.0",
-  "plotly>=5.0.0",
-  "seaborn>=0.12.0",
+  "matplotlib>=3.8,<4.0",
+  "plotly>=5.24.1",
+  "seaborn>=0.13.2",
   # Jupyter minimal
   "jupyter>=1.0,<2.0",
   "ipykernel>=6.29,<7.0",
@@ -39,66 +39,65 @@ dependencies = [
   "viztracer>=0.17.1",
   # Environment management
   "python-dotenv>=1.0,<2.0",
+  "memory-profiler>=0.61.0",
 ]
 
 [project.optional-dependencies]
+# PyTorch with CUDA - separate for flexibility
+torch-cu124 = [
+  "torch>=2.0,<3.0",
+  "torchvision>=0.15,<1.0",
+  "torchaudio>=2.0,<3.0"
+]
+
 # Development tools - minimal set
 dev = [
-  "ruff>=0.5.0",
-  "mypy>=1.10.0",
-  "pydantic>=2.8.0",
-  "pytest>=8.0.0",
-  "pytest-cov>=5.0.0",
-  "types-requests>=2.32.0",
-  "types-PyYAML>=6.0.12",
-  "pre-commit>=3.7.0",
-  "memory-profiler>=0.61.0",
-  "safety>=3.2.0",
+  "ruff>=0.5.3,<1.0",
+  "mypy>=1.10,<2.0",
+  "pydantic>=2.9.2",
+  "pytest>=8.2,<9.0",
+  "pytest-cov>=5.0,<6.0",
+  "types-requests>=2.32,<3.0",
+  "types-PyYAML>=6.0,<7.0",
+  "pre-commit>=3.0,<4.0",
 ]
 
 # Extended data science tools (optional)
 datascience = [
   "seaborn>=0.13,<1.0",
   "plotly>=5.0,<6.0",
-  "scikit-image>=0.24.0,<1.0",
-  "pywavelets>=1.4.0,<2.0",
+  "scikit-image>=0.25.0,<1.0",
+  "pywavelets>=1.9.0,<2.0",
 ]
 
 # Notebook and lab tools (optional)
 notebook = [
-  "jupyterlab>=4.2.0",
-  "ipdb>=0.13.13",
-  "notebook>=7.2.0",
+  "jupyterlab>=4.2,<5.0",
+  "ipdb>=0.13,<1.0",
+  "notebook>=7.0,<8.0",
 ]
 
 # Experiment tracking (optional)
 tracking = [
-  "tensorboard>=2.16.0",
-  "wandb>=0.17.0",
+  "tensorboard>=2.17,<3.0",
+  "wandb>=0.17,<1.0",
 ]
 
 # Data acquisition (optional)
 data = [
-  "kaggle>=1.6.0",
+  "kaggle>=1.6,<2.0",
 ]
 
 # Profiling tools (optional) 
 profiling = [
-  "viztracer>=0.17.1",
-  "memory-profiler>=0.61.0",
+  "viztracer>=0.16,<1.0",
+  "memory-profiler>=0.61,<1.0",
 ]
 
 # Security scanning (optional)
 security = [
-  "safety>=3.2.0",
-  "bandit>=1.7.5",
-]
-
-# CUDA 12.6 specific PyTorch
-torch-cu126 = [
-  "torch>=2.5.0",
-  "torchvision>=0.21.0", 
-  "torchaudio>=2.6.0",
+  "safety>=3.0,<4.0",
+  "bandit>=1.7,<2.0",
 ]
 
 [build-system]
@@ -196,9 +195,7 @@ module = [
     "plotly.*",
     "sklearn.*",
     "viztracer.*",
-    "memory_profiler.*",
-    "albumentations.*",
-    "sentencepiece.*"
+    "memory_profiler.*"
 ]
 ignore_missing_imports = true
 
@@ -245,16 +242,14 @@ index-strategy = "unsafe-best-match"
 resolution = "highest"
 compile-bytecode = true
 link-mode = "copy"
-concurrent-downloads = 10
-
-# PyTorch CUDA 12.6 index
-[[tool.uv.index]]
-name = "pytorch-cu126"
-url = "https://download.pytorch.org/whl/cu126"
-explicit = true
 
 # Primary index: PyPI (default)
 [[tool.uv.index]]
 name = "pypi"
 url = "https://pypi.org/simple"
 default = true
+
+# Secondary index: PyTorch CUDA wheels
+[[tool.uv.index]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cu124"
