--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
   "tqdm>=4.66,<5.0",
   
   # Deep learning ecosystem (CPU versions - GPU versions in extras)
+  "torch",
   "transformers>=4.44,<4.46",
   "datasets>=2.19,<3.1",
   "accelerate>=0.33,<1.0",
@@ -62,9 +63,20 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-# PyTorch with CUDA 12.6 support - primary ML framework
+# PyTorch with CUDA 12.6 support - legacy ML framework
 torch-cu126 = [
   # PyTorch packages with CUDA 12.6 support
+  "torch>=2.4.0,<2.6",
+  "torchvision>=0.19.0,<0.21",
+  "torchaudio>=2.4.0,<2.6",
+  # Additional PyTorch ecosystem
+  "torchtext>=0.18.0,<0.19",
+  "lightning>=2.4,<3.0",
+]
+
+# PyTorch with CUDA 12.1 support - compatible with CUDA 13.0 host
+torch-cu121 = [
+  # PyTorch packages with CUDA 12.1 support (forward compatible with CUDA 13.0)
   "torch>=2.4.0,<2.6",
   "torchvision>=0.19.0,<0.21",
   "torchaudio>=2.4.0,<2.6",
@@ -200,12 +212,10 @@ nlp = [
   "textblob>=0.18,<1.0",
 ]
 
-# Computer vision extensions  
+# Computer vision extensions
 cv = [
   "ultralytics>=8.2,<9.0",
-  "detectron2 @ git+https://github.com/facebookresearch/detectron2.git",
   "timm>=1.0,<2.0",
-  "mmcv>=2.1,<3.0",
 ]
 
 # All extras combined for comprehensive installation
@@ -517,8 +527,8 @@ link-mode = "copy"
 concurrent-downloads = 10
 keyring-provider = "subprocess"
 
-# Default dependency groups to install
-default-groups = ["dev"]
+# Default dependency groups to install - using optional-dependencies format
+# default-groups = ["dev"]
 
 # Index configuration for package sources
 [[tool.uv.index]]
@@ -526,10 +536,16 @@ name = "pypi"
 url = "https://pypi.org/simple"
 default = true
 
-# PyTorch CUDA 12.4 wheels index
+# PyTorch CUDA 12.6 wheels index
 [[tool.uv.index]]
 name = "pytorch-cu126"
 url = "https://download.pytorch.org/whl/cu126"
+explicit = true
+
+# PyTorch CUDA 12.1 wheels index
+[[tool.uv.index]]
+name = "pytorch-cu121"
+url = "https://download.pytorch.org/whl/cu121"
 explicit = true
 
 # ==============================================================================
