fixed cuda version to 12.9

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,17 +1,17 @@
 # syntax=docker/dockerfile:1.7
 
 # Multi-stage build for CUDA-enabled PyTorch development environment
-# Uses NVIDIA CUDA 12.6.1 runtime with optimized layer caching
+# Uses NVIDIA CUDA 12.9.0 runtime with optimized layer caching
 
 # ==============================================================================
 # CUDA Base Stage - NVIDIA CUDA runtime with development tools
 # ==============================================================================
-FROM nvidia/cuda:13.0.0-cudnn-devel-ubuntu24.04 AS cuda-base
+FROM nvidia/cuda:12.9.0-cudnn-runtime-ubuntu24.04 AS cuda-base
 
 # Build arguments for cache control and versioning
 ARG BUILDKIT_INLINE_CACHE=1
 ARG PYTHON_VERSION=3.12
-ARG CUDA_VERSION=13.0
+ARG CUDA_VERSION=12.9
 ARG APP_USER=ubuntu
 ARG APP_UID=1000
 ARG APP_GID=1000
@@ -26,12 +26,12 @@ ENV DEBIAN_FRONTEND=noninteractive \
     LIBRARY_PATH=/usr/local/cuda/lib64/stubs:${LIBRARY_PATH} \
     NVIDIA_VISIBLE_DEVICES=all \
     NVIDIA_DRIVER_CAPABILITIES=compute,utility \
-    NVIDIA_REQUIRE_CUDA="cuda>=13.0" \
+    NVIDIA_REQUIRE_CUDA="cuda>=12.9" \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8
 
 # Verify CUDA installation and create symlinks
-RUN ln -sf /usr/local/cuda-13.0 /usr/local/cuda && \
+RUN ln -sf /usr/local/cuda-12.9 /usr/local/cuda && \
     echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/cuda.conf && \
     echo "/usr/local/cuda/compat" >> /etc/ld.so.conf.d/cuda.conf && \
     ldconfig && \
@@ -146,9 +146,7 @@ COPY --chown=${APP_USER}:${APP_USER} pyproject.toml uv.lock* ./
 RUN --mount=type=cache,target=/home/${APP_USER}/.cache/uv,uid=${APP_UID},gid=${APP_GID} \
     . .venv/bin/activate && \
     uv sync \
-    --no-install-project \
     --index-strategy unsafe-best-match \
-    --extra torch-cu121 \
     --compile-bytecode && \
     echo "PyTorch CUDA dependencies installed successfully"
 
@@ -204,10 +202,10 @@ CMD ["/bin/bash", "-l"]
 # ==============================================================================
 LABEL org.opencontainers.image.title="torch_starter" \
     org.opencontainers.image.description="CUDA-enabled PyTorch development environment with Python 3.12" \
-    org.opencontainers.image.version="2.1-cuda12.6" \
+    org.opencontainers.image.version="2.1-cuda12.9" \
     org.opencontainers.image.vendor="PyTorch DevContainer" \
     org.opencontainers.image.licenses="MIT" \
-    cuda.version="13.0" \
+    cuda.version="12.9" \
     pytorch.version=">=2.4.0" \
     python.version="3.12"
 
