--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "torch_starter-cuda (CUDA 12.9, uv, Py3.12)",
+  "name": "torch_starter-cuda (CUDA 12.1, uv, Py3.12)",
   "build": {
     "dockerfile": "Dockerfile",
     "context": "..",
@@ -9,14 +9,13 @@
       "--build-arg",
       "PYTHON_VERSION=3.12",
       "--build-arg",
-      "CUDA_VERSION=12.9"
+      "CUDA_VERSION=12.1"
     ]
   },
   "runArgs": [
     "--gpus",
     "all",
-    "--runtime=nvidia",
-    "--shm-size=4g",
+    "--shm-size=8g",
     "--ulimit",
     "memlock=-1",
     "--ulimit",
@@ -24,7 +23,8 @@
     "--cap-add",
     "SYS_PTRACE",
     "--security-opt",
-    "seccomp=unconfined"
+    "seccomp=unconfined",
+    "--ipc=host"
   ],
   "containerUser": "ubuntu",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
@@ -35,17 +35,21 @@
     "KAGGLE_CONFIG_DIR": "/home/ubuntu/.kaggle",
     "UV_LINK_MODE": "copy",
     "UV_COMPILE_BYTECODE": "1",
-    "UV_CONCURRENT_DOWNLOADS": "10",
+    "UV_CONCURRENT_DOWNLOADS": "20",
+    "UV_HTTP_TIMEOUT": "600",
     "PYTHONDONTWRITEBYTECODE": "1",
     "PYTHONUNBUFFERED": "1",
-    "CUDA_VERSION": "12.9",
+    "PYTHONOPTIMIZE": "1",
+    "CUDA_VERSION": "12.1",
     "CUDA_VISIBLE_DEVICES": "all",
     "NVIDIA_VISIBLE_DEVICES": "all",
     "NVIDIA_DRIVER_CAPABILITIES": "compute,utility",
-    "NVIDIA_REQUIRE_CUDA": "cuda>=12.9",
+    "NVIDIA_REQUIRE_CUDA": "cuda>=12.1",
     "TORCH_CUDA_ARCH_LIST": "7.0;7.5;8.0;8.6;8.9;9.0",
     "FORCE_CUDA": "1",
-    "TORCH_USE_CUDA_DSA": "1"
+    "PYTORCH_CUDA_ALLOC_CONF": "max_split_size_mb:512,garbage_collection_threshold:0.6",
+    "CUDA_LAUNCH_BLOCKING": "0",
+    "MALLOC_ARENA_MAX": "2"
   },
   "mounts": [
     {
@@ -77,12 +81,17 @@
       "source": "torch-starter-pip-cache",
       "target": "/home/ubuntu/.cache/pip",
       "type": "volume"
+    },
+    {
+      "source": "torch-starter-models",
+      "target": "/home/ubuntu/.cache/models",
+      "type": "volume"
     }
   ],
   "initializeCommand": [
     "bash",
     "-c",
-    "docker volume create torch-starter-hf-cache 2>/dev/null || true; docker volume create torch-starter-torch-cache 2>/dev/null || true; docker volume create torch-starter-kaggle-cache 2>/dev/null || true; docker volume create torch-starter-data 2>/dev/null || true; docker volume create torch-starter-uv-cache 2>/dev/null || true; docker volume create torch-starter-pip-cache 2>/dev/null || true"
+    "echo '🏗️  Initializing Docker volumes...' && docker volume create torch-starter-hf-cache 2>/dev/null || true; docker volume create torch-starter-torch-cache 2>/dev/null || true; docker volume create torch-starter-kaggle-cache 2>/dev/null || true; docker volume create torch-starter-data 2>/dev/null || true; docker volume create torch-starter-uv-cache 2>/dev/null || true; docker volume create torch-starter-pip-cache 2>/dev/null || true; docker volume create torch-starter-models 2>/dev/null || true; echo '✅ Docker volumes ready'"
   ],
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {
@@ -95,9 +104,10 @@
     }
   },
   "postCreateCommand": {
-    "activate-env": "bash -c 'source .venv/bin/activate && python -c \"import sys; print(f\\\"🐍 Python {sys.version}\\\")\" && python -c \"import torch; print(f\\\"🔥 PyTorch {torch.__version__}\\\"); print(f\\\"🚀 CUDA Available: {torch.cuda.is_available()}\\\"); print(f\\\"📱 CUDA Devices: {torch.cuda.device_count()}\\\") if torch.cuda.is_available() else print(\\\"⚠️  CUDA Not Available\\\")\"'",
+    "activate-env": "bash -c 'echo \"🐍 Activating Python environment...\" && source .venv/bin/activate && python -c \"import sys; print(f\\\"✅ Python {sys.version}\\\")\" && python -c \"import torch; print(f\\\"🔥 PyTorch {torch.__version__}\\\"); print(f\\\"🚀 CUDA Available: {torch.cuda.is_available()}\\\"); print(f\\\"📱 CUDA Devices: {torch.cuda.device_count()}\\\") if torch.cuda.is_available() else print(\\\"⚠️  CUDA Not Available\\\"); import transformers; print(f\\\"🤗 Transformers {transformers.__version__}\\\")\"'",
     "setup-git": "git config --global --add safe.directory /workspaces/${localWorkspaceFolderBasename}",
-    "verify-cuda": "bash -c 'if command -v nvidia-smi >/dev/null 2>&1; then echo \"🖥️  GPU Information:\"; nvidia-smi --query-gpu=name,memory.total,compute_cap --format=csv,noheader; else echo \"⚠️  nvidia-smi not available\"; fi'"
+    "verify-cuda": "bash -c 'if command -v nvidia-smi >/dev/null 2>&1; then echo \"🖥️  GPU Information:\"; nvidia-smi --query-gpu=name,memory.total,compute_cap --format=csv,noheader; echo \"📊 GPU Driver Info:\"; nvidia-smi --query-gpu=driver_version --format=csv,noheader; else echo \"⚠️  nvidia-smi not available - GPU may not be accessible\"; fi'",
+    "setup-aliases": "echo 'alias gpu-monitor=\"watch -n 1 \\\"nvidia-smi --query-gpu=utilization.gpu,memory.used,memory.total,temperature.gpu --format=csv\\\"\"' >> ~/.bashrc && echo 'alias gpu-info=\"nvidia-smi --query-gpu=name,memory.total,compute_cap,driver_version --format=csv\"' >> ~/.bashrc && echo 'alias torch-info=\"python -c \\\"import torch; print(f\\\"PyTorch: {torch.__version__}\\\"); print(f\\\"CUDA: {torch.version.cuda}\\\"); print(f\\\"cuDNN: {torch.backends.cudnn.version()}\\\"); print(f\\\"Devices: {torch.cuda.device_count()}\\\")\\\"\"' >> ~/.bashrc"
   },
   "customizations": {
     "vscode": {
@@ -114,7 +124,9 @@
         "gaogaotiantian.viztracer-vscode",
         "bierner.markdown-mermaid",
         "ms-toolsai.vscode-ai-remote",
-        "GitHub.copilot"
+        "GitHub.copilot",
+        "ms-python.debugpy",
+        "ms-vscode.vscode-json"
       ],
       "settings": {
         "python.defaultInterpreterPath": "/workspaces/${localWorkspaceFolderBasename}/.venv/bin/python",
@@ -133,6 +145,10 @@
           },
           {
             "name": "transformers",
+            "depth": 2
+          },
+          {
+            "name": "datasets",
             "depth": 2
           }
         ],
@@ -153,14 +169,19 @@
           "**/.ruff_cache/**": true,
           "**/.pytest_cache/**": true,
           "**/node_modules/**": true,
-          "**/.cache/**": true
+          "**/.cache/**": true,
+          "**/data/**": true,
+          "**/logs/**": true,
+          "**/*.log": true
         },
         "search.exclude": {
           "**/.venv": true,
           "**/__pycache__": true,
           "**/.mypy_cache": true,
           "**/.ruff_cache": true,
-          "**/.cache": true
+          "**/.cache": true,
+          "**/data": true,
+          "**/logs": true
         },
         "files.exclude": {
           "**/.venv": false,
@@ -172,7 +193,8 @@
         "terminal.integrated.defaultProfile.linux": "zsh",
         "terminal.integrated.shellIntegration.enabled": true,
         "terminal.integrated.env.linux": {
-          "CUDA_VISIBLE_DEVICES": "all"
+          "CUDA_VISIBLE_DEVICES": "all",
+          "PYTORCH_CUDA_ALLOC_CONF": "max_split_size_mb:512,garbage_collection_threshold:0.6"
         },
         "jupyter.askForKernelRestart": false,
         "jupyter.defaultKernel": "torch_starter-3.12",
@@ -207,24 +229,32 @@
           },
           "editor.formatOnSave": true
         },
-      },
-      "[json]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-      },
-      "[jsonc]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
+        "[json]": {
+          "editor.defaultFormatter": "vscode.json-language-features"
+        },
+        "[jsonc]": {
+          "editor.defaultFormatter": "vscode.json-language-features"
+        },
+        "[dockerfile]": {
+          "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+        },
+        "debug.console.fontSize": 14,
+        "debug.internalConsoleOptions": "openOnSessionStart",
+        "python.analysis.diagnosticMode": "workspace"
       }
     }
   },
   "remoteEnv": {
     "ROO_CONFIG_PATH": "/workspaces/${localWorkspaceFolderBasename}/.roo/roo.json",
-    "MCP_SERVERS_CONFIG": "/workspaces/${localWorkspaceFolderBasename}/.mcp/servers.json"
+    "MCP_SERVERS_CONFIG": "/workspaces/${localWorkspaceFolderBasename}/.mcp/servers.json",
+    "CUDA_VISIBLE_DEVICES": "all"
   },
   "shutdownAction": "stopContainer",
   "hostRequirements": {
     "gpu": "optional",
-    "memory": "12gb",
-    "cpus": 8
+    "memory": "16gb",
+    "cpus": 8,
+    "storage": "50gb"
   },
   "capAdd": [
     "SYS_PTRACE"
@@ -232,8 +262,8 @@
   "securityOpt": [
     "seccomp=unconfined"
   ],
-  "onCreateCommand": "echo '🏗️  Container created successfully'",
-  "updateContentCommand": "echo '🔄 Content updated'",
-  "postStartCommand": "echo '🚀 Development environment ready!'",
+  "onCreateCommand": "echo '🏗️  Container created successfully - Setting up CUDA environment...'",
+  "updateContentCommand": "echo '🔄 Content updated - Verifying Python environment...' && source .venv/bin/activate && python -c 'import torch; print(f\"✅ Environment ready - PyTorch {torch.__version__} CUDA: {torch.cuda.is_available()}\")'",
+  "postStartCommand": "echo '🚀 Development environment ready!' && echo '💡 Use \"gpu-monitor\" to monitor GPU usage' && echo '💡 Use \"torch-info\" to check PyTorch CUDA status'",
   "waitFor": "postCreateCommand"
 }
